<resources>
    <string name="app_name">LastWednesday</string>
    <string name="facebook_app_id">212782095949337</string>
    <string name="fb_login_protocol_scheme">fb212782095949337</string>
    <string name="server_client_id">964138090496-ueb0pmmhkmg7q6c54vr5gi6u96dj26l9.apps.googleusercontent.com</string>


    <string name="star">별점매기기</string>
    <string name="comment">코멘트쓰기</string>
    <string name="running">러닝타임</string>
    <string name="view_age">관람연령</string>
    <string name="cast">출연진</string>
    <string name="crew">제작진</string>
    <string name="wishlist"> 위시리스트</string>
    <string name="my_shown_play">관람한 공연들</string>
    <string name="comment_title">코멘트</string>
    <string name="stared_title">별점을 매겨주세요!</string>
    <string name="search">검색</string>
    <string name="genre">장르</string>
    <string name="place">공연</string>

    <string name="delete">삭제</string>
    <string name="select">개 선택</string>

    <string name="tag_title">태그 검색 설정</string>
    <string name="tag_recommand">MY 추천태그</string>

    <string name="comment_placeholder">이곳을 눌러 코멘트를 작성해주세요.</string>

    <string name="btn_cancle">취소</string>
    <string name="btn_check">확인</string>
    <string name="btn_complete">완료</string>
    <string name="my_ticket">MY 티켓북</string>
    <string name="my_wishlist">My 위시리스트</string>

</resources>
