<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.teamnexters.lastwednesday.activity.TagActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tag_title"
            android:textColor="@color/cBlack"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_skyblue" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cGray1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="asdf"
                android:textColor="@color/cBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_recommand"
                android:textColor="@color/cBlack" />
        </LinearLayout>

        <com.cunoraz.tagview.TagView xmlns:tagview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tag_recommand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tagview:lineMargin="5dp"
            tagview:tagMargin="5dp"
            tagview:textPaddingBottom="5dp"
            tagview:textPaddingLeft="8dp"
            tagview:textPaddingRight="8dp"
            tagview:textPaddingTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/cBlack" />

        <com.cunoraz.tagview.TagView xmlns:tagview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tag_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tagview:lineMargin="5dp"
            tagview:tagMargin="5dp"
            tagview:textPaddingBottom="5dp"
            tagview:textPaddingLeft="8dp"
            tagview:textPaddingRight="8dp"
            tagview:textPaddingTop="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="@color/cBlack" />

        <com.cunoraz.tagview.TagView xmlns:tagview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tag_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tagview:lineMargin="5dp"
            tagview:tagMargin="5dp"
            tagview:textPaddingBottom="5dp"
            tagview:textPaddingLeft="8dp"
            tagview:textPaddingRight="8dp"
            tagview:textPaddingTop="5dp" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btn_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cSkyblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/btn_complete"
        android:textColor="@color/cWhite" />


</LinearLayout>
