<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="date"
            type="String" />

        <variable
            name="concertHall"
            type="String" />

        <variable
            name="running"
            type="String" />

        <variable
            name="genre"
            type="String" />

        <variable
            name="age"
            type="String" />

        <variable
            name="casts"
            type="String" />

        <variable
            name="crews"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:layout_marginBottom="@dimen/ticket_cell_margin"
            android:background="@drawable/background_ticket">

            <TextView
                android:id="@+id/text_content_title"
                style="@style/ConstraintTop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_title_ticket"
                android:gravity="center"
                android:padding="5dp"
                android:text="@{title}"
                android:textColor="@color/cWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_content_ticket"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@color/cGray2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_content_title" />

            <TextView
                android:id="@+id/text_content_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/border_white"
                android:padding="5dp"
                android:text="@{genre}"
                android:textColor="@color/cWhite"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_content_title" />

            <TextView
                android:id="@+id/text_content_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{date}"
                android:alpha="0.7"
                android:textColor="@color/cWhite"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_content_ticket"
                app:layout_constraintStart_toStartOf="@+id/text_content_genre"
                app:layout_constraintTop_toBottomOf="@+id/text_content_genre" />

            <TextView
                android:id="@+id/text_content_hall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@{concertHall}"
                android:alpha="0.7"
                android:textColor="@color/cWhite"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_content_ticket"
                app:layout_constraintStart_toStartOf="@+id/text_content_genre"
                app:layout_constraintTop_toBottomOf="@+id/text_content_date" />

            <GridLayout
                android:id="@+id/grid_content_ticket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="@dimen/ticket_padding"
                android:useDefaultMargins="true"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_content_ticket">

                <TextView
                    style="@style/TicketSpecificTitle"
                    android:text="@string/running" />

                <TextView
                    style="@style/TicketSpecificContent"
                    android:text="@{running}" />

                <TextView
                    style="@style/TicketSpecificTitle"
                    android:text="@string/view_age" />

                <TextView
                    style="@style/TicketSpecificContent"
                    android:text="@{age}" />

                <TextView
                    style="@style/TicketSpecificTitle"
                    android:text="@string/cast" />

                <TextView
                    style="@style/TicketSpecificContent"
                    android:text="@{casts}" />

                <TextView
                    style="@style/TicketSpecificTitle"
                    android:text="@string/crew" />

                <TextView
                    style="@style/TicketSpecificContent"
                    android:text="@{crews}" />
            </GridLayout>


            <!--line-->
            <View
                android:id="@+id/line_content"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#e5e5e5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grid_content_ticket" />

            <TextView
                android:id="@+id/text_content_star"
                style="@style/CommentStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_grey"
                android:text="@string/star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="8dp"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_content" />

            <TextView
                android:id="@+id/text_content_comment"
                style="@style/CommentStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_create_grey"
                android:text="@string/comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/text_content_star"
                app:layout_constraintTop_toBottomOf="@+id/line_content" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</layout>